2022-08-27T01:59:40Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2937603631
* notice: last 14d: unq all: 5 11
* notice: prev accum: outdated-unq outdated-all / unq all: 184 300 / 189 307
* notice: next accum: outdated-unq outdated-all / unq all: 184 300 / 192 311
* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2022-08-26]

2022-08-26T16:25:35Z:
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 181 295 / 187 303
* notice: next accum: outdated-unq outdated-all / unq all: 184 300 / 189 307
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-12] / []

2022-08-26T08:23:26Z:
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 181 295 / 189 307
* notice: next accum: outdated-unq outdated-all / unq all: 181 295 / 187 303
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -2 -4 / +3 +5 -2 -4 / 1 1
* notice: removed / changed dates: [] / [2022-08-12]

2022-08-24T01:55:25Z:
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 177 290 / 186 303
* notice: next accum: outdated-unq outdated-all / unq all: 181 295 / 189 307
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-09] / []

2022-08-23T16:24:39Z:
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 177 290 / 189 307
* notice: next accum: outdated-unq outdated-all / unq all: 177 290 / 186 303
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +4 +5 -3 -4 / 1 1
* notice: removed / changed dates: [] / [2022-08-09]

2022-08-22T16:23:36Z:
* notice: last 14d: unq all: 6 17