@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-27T01:59:40Z",
+  "timestamp" : "2022-08-29T08:22:58Z",
   "count_outdated" : 300,
   "uniques_outdated" : 184,
-  "count" : 311,
-  "uniques" : 192,
+  "count" : 329,
+  "uniques" : 200,
   "clones" : [
     {
       "timestamp": "2022-08-15T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 4, 4 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ]
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
+      "count": 18,
+      "count_minmax": [ 18, 18 ],
+      "uniques": 8,
+      "uniques_minmax": [ 8, 8 ]
     }
   ]
 }
