@@ -1,6 +1,6 @@
 {
-  "count": 11,
-  "uniques": 5,
+  "count": 29,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-08-15T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
+      "count": 18,
+      "uniques": 8
     }
   ]
 }
