@@ -1,3 +1,11 @@
+2022-08-29T08:22:58Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2947023768
+* notice: last 14d: unq all: 10 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 184 300 / 192 311
+* notice: next accum: outdated-unq outdated-all / unq all: 184 300 / 200 329
+* notice: prev exec diff / last date diff / accum: unq all: +8 +18 -0 -0 / +8 +18 -0 -0 / 8 18
+* notice: removed / changed dates: [] / [2022-08-29]
+
 2022-08-27T01:59:40Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2937603631
 * notice: last 14d: unq all: 5 11
